feat: create dashboard screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,10 @@
 :root {
   --dark-purple: #13072e;
+  --image-base: 'url(../src/assets/Designer.jpeg)';
 }
 
 body {
   background-color: var(--dark-purple);
+  margin: 0;
+  padding: 0;
 }
