Creating Match Page

--- a/frontend/src/screens/about/about.css
+++ b/frontend/src/screens/about/about.css
@@ -31,6 +31,7 @@
   .about-image {
     object-fit: cover;
     height: 600px;
+    mask-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0) 70%);
   }
   
   .about-content {
@@ -58,17 +59,32 @@
   
   .about-welcome {
     padding: 4px 8px;
-    color: whitesmoke;
+    color: rgba(245, 245, 245, 0.6);
     border-radius: 5px;
     margin: auto;
+    font-family: "Karla", sans-serif;
   }
   
+  .about-title-content{
+    display: flex;
+  }
+
   .about-title {
     color: white;
+    font-family: "Karla", sans-serif;
+    font-size: 5rem;
+  }
+
+  .about-title-second{
+    color: #DCCAE9;
+    font-family: "Karla", sans-serif;
+    font-size: 5rem;
   }
   
   .about-description {
     color: whitesmoke;
+    font-family: "Karla", sans-serif;
+    font-size: 1.1rem;
   }
   
   /* Stats Section */
@@ -93,6 +109,7 @@
   
   .stat-item {
     text-align: center;
+    font-size: 1.5rem;
   }
   
   .stat-number {
@@ -115,25 +132,20 @@
   margin: 0 auto;
   padding: 2rem 1rem;
   background-color: #0b0205;
-
 }
 
 .benefits-grid {
   display: grid;
   gap: 0.75rem;
   margin-bottom: 0.75rem;
-  
 }
 
 .first-row {
   grid-template-columns: repeat(2, 1fr);
-  
 }
-
 
 .second-row {
   grid-template-columns: repeat(3, 1fr);
-  
 }
 
 @media (min-width: 768px) {
@@ -152,15 +164,32 @@
   border-radius: 0.5rem;
   border: solid 2px #9356A0;
   color: whitesmoke;
+  box-shadow: -2px -2px 94px -18px #37225a;
+  -webkit-box-shadow: -2px -2px 94px -18px #37225a;
+  -moz-box-shadow: -2px -2px 94px -18px #37225a;
+  transition: transform 0.3s ease, flex-grow 0.3s ease;
+  flex-grow: 1;
+}
+
+.benefit-box:hover {
+  transform: scale(1.02);
+  flex-grow: 1.1;
+}
+
+.benefits-grid .benefit-box:not(:hover) {
+  transform: scale(0.8);
+  flex-grow: 0.5;
 }
 
 .benefit-title {
   color: var(--grey-700);
   margin-bottom: 0.5rem;
   font-size: 2rem;
+  font-family: "Karla", sans-serif;
 }
 
 .benefit-description {
   color: whitesmoke;
   font-size: 1rem;
+  font-family: "Karla", sans-serif;
 }
