--- a/frontend/src/components/organisms/Accordion/Accordion.css
+++ b/frontend/src/components/organisms/Accordion/Accordion.css
@@ -19,15 +19,18 @@
   cursor: pointer;
   padding: 1rem 0;
   color: white;
+  font-family: "Karla", sans-serif;;
 }
 
 .accordion-question {
-  color: white;
-  font-size: 1.2rem;
+  color: whitesmoke;
+  font-size: 1.5rem;
+  font-family: "Karla", sans-serif;
 }
 
 .accordion-icon {
   transition: transform 0.3s;
+  color: #9356A0;
 }
 
 .accordion-icon.rotate {
@@ -35,9 +38,10 @@
 }
 
 .accordion-content {
-  color: whitesmoke;
+  color: rgba(255, 255, 255, 0.625);
   transition: all 0.3s;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-family: "Karla", sans-serif;
 }
 
 .accordion-content.hidden {
