--- a/frontend/src/components/organisms/FaqsSection/FaqsSection.css
+++ b/frontend/src/components/organisms/FaqsSection/FaqsSection.css
@@ -5,7 +5,9 @@
   overflow: hidden;
   text-align: center;
   border-radius: 0.5rem;
-  box-shadow: 0 0 10px rgba(227, 7, 161, 0.362);
+  box-shadow: -2px -2px 94px -18px #37225a;
+    -webkit-box-shadow: -2px -2px 94px -18px #37225a;
+    -moz-box-shadow: -2px -2px 94px -18px #37225a;
   background-color: #0b0205;
 }
 
@@ -13,12 +15,16 @@
   color: white;
   font-weight: 700;
   font-size: 2.5rem;
+  font-family: "Karla", sans-serif;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.898);
+  margin: 2rem;
 }
 
 .faqs-text{
   color: whitesmoke;
   font-weight: 500;
   font-size: 1.1rem;
+  font-family: "Karla", sans-serif;
 }
 
 .faqs-container {
@@ -58,11 +64,15 @@
   color: white;
   margin-bottom: 0.5rem;
   font-size: 2rem;
+  font-family: "Karla", sans-serif;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.898);
 }
 
 .faqs .info-text {
   color: whitesmoke;
   font-size: 1rem;
+  font-family: "Karla", sans-serif;
+  margin: 1rem;
 }
 
 .faqs .btn-primary {
