--- a/frontend/src/components/organisms/Intro/Intro.css
+++ b/frontend/src/components/organisms/Intro/Intro.css
@@ -21,10 +21,15 @@
   
   .intro-title {
     color: white;
+    font-size: 4rem;
+    font-family: "Karla", sans-serif;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.898);
   }
   
   .intro-description {
     color: whitesmoke;
+    font-size: 1.2rem;
+    font-family: "Karla", sans-serif;
   }
   
   .intro-stats {
@@ -38,6 +43,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    box-shadow: -2px -2px 94px -18px #37225a;
+    -webkit-box-shadow: -2px -2px 94px -18px #37225a;
+    -moz-box-shadow: -2px -2px 94px -18px #37225a;
   }
   
   .intro-stat {
@@ -50,14 +58,18 @@
   .stat-number {
     color: whitesmoke;
     margin-bottom: 0;
+    font-size: 2.5rem;
+    font-family: "Karla", sans-serif;
   }
   
   .stat-plus {
     color: #9356A0;
+    font-size: 2.5rem;
   }
   
   .stat-label {
     color: whitesmoke;
     margin-top: 0;
+    font-size: 1.5rem;
   }
   
