--- a/frontend/src/components/organisms/TestimonialSection/TestimonialSection.css
+++ b/frontend/src/components/organisms/TestimonialSection/TestimonialSection.css
@@ -6,10 +6,13 @@
   
 .testimonial-title{
   color: white;
+  font-family: "Karla", sans-serif;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.898);
 }
 
 .testimonial-text{
   color: whitesmoke;
+  font-family: "Karla", sans-serif;
 }
 
   .testimonial-header {
@@ -31,6 +34,9 @@
     padding: 5px;
     border-radius: 5px;
     color: whitesmoke;
+    box-shadow: -2px -2px 94px -18px #37225a;
+    -webkit-box-shadow: -2px -2px 94px -18px #37225a;
+    -moz-box-shadow: -2px -2px 94px -18px #37225a;
   }
   
   .testimonial-swiper {
@@ -53,13 +59,16 @@
   
   .review-name {
     color: white;
-    font-size: 1.25rem;
+    font-size: 1.35rem;
+    font-family: "Karla", sans-serif;
+    margin: 1rem;
   }
   
   .review-designation {
-    color: whitesmoke;
-    font-size: 0.875rem;
-    margin-left: 1rem;
+    color: rgba(245, 245, 245, 0.685);
+    font-size: 1rem;
+    margin-left: 1.5rem;
+    font-family: "Karla", sans-serif;
   }
   
   .review-social-links {
@@ -92,9 +101,11 @@
   .review-text {
     color: whitesmoke;
     margin: 1rem;
+    font-family: "Karla", sans-serif;
   }
   
   .review-count{
     color:#dccae9;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.898);
   }
   
