--- a/frontend/src/screens/(home)/Home.css
+++ b/frontend/src/screens/(home)/Home.css
@@ -8,7 +8,7 @@
     position: relative;
     color: white;
     text-align: center;
-    background-image: url("../../src/assets/baner6.jpeg");
+    background-image: url("../../src/assets/baner.png");
     width: 100%;
     max-width: 100%;
     height: 100vh;
